WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282556
Skip a few more unsafe buffer usage warnings
https://bugs.webkit.org/show_bug.cgi?id=282556
Summary
Skip a few more unsafe buffer usage warnings
Geoffrey Garen
Reported
2024-11-04 13:03:20 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-04 13:03:34 PST
<
rdar://problem/139229772
>
Geoffrey Garen
Comment 2
2024-11-04 13:04:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36144
EWS
Comment 3
2024-11-04 13:47:31 PST
Committed
286120@main
(6ce7c207f253): <
https://commits.webkit.org/286120@main
> Reviewed commits have been landed. Closing PR #36144 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug