Skip a few more unsafe buffer usage warnings https://bugs.webkit.org/show_bug.cgi?id=282556 rdar://139229772

Reviewed by Chris Dumez.

* Source/JavaScriptCore/generator/DSL.rb:
* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
(GenerateEnumerationImplementation):
* Source/WebCore/editing/cocoa/DataDetection.mm:

Canonical link: https://commits.webkit.org/286120@main