Source/WebCore/editing/cocoa/DataDetection.mm
@@ -68,6 +68,8 @@
 #import <pal/mac/DataDetectorsSoftLink.h>
 #import <pal/spi/ios/DataDetectorsUISoftLink.h>
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
+
 #if PLATFORM(MAC)
 template<> struct WTF::CFTypeTrait<DDResultRef> {
     static inline CFTypeID typeID(void) { return DDResultGetCFTypeID(); }
@@ -857,5 +859,7 @@ Ref<HTMLDivElement> DataDetection::createElementForImageOverlay(Document& docume
 #endif // ENABLE(IMAGE_ANALYSIS)
 
 } // namespace WebCore
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 
 #endif
