Source/WebCore/bindings/scripts/test/JS/JSTestDefaultToJSONEnum.cpp
@@ -26,6 +26,9 @@
 #include <wtf/NeverDestroyed.h>
 #include <wtf/SortedArrayMap.h>
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
+
+
 
 namespace WebCore {
 using namespace JSC;
@@ -70,3 +73,6 @@ template<> ASCIILiteral expectedEnumerationValues<TestDefaultToJSONEnum>()
 }
 
 } // namespace WebCore
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
+
