Source/WebCore/bindings/scripts/test/JS/JSTestStandaloneEnumeration.cpp
@@ -29,6 +29,9 @@
 #include <wtf/NeverDestroyed.h>
 #include <wtf/SortedArrayMap.h>
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
+
+
 
 namespace WebCore {
 using namespace JSC;
@@ -73,5 +76,8 @@ template<> ASCIILiteral expectedEnumerationValues<TestStandaloneEnumeration>()
 }
 
 } // namespace WebCore
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
+
 
 #endif // ENABLE(CONDITION)
